[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/btn_play.png" type="Texture" id=2]
[ext_resource path="res://assets/btn_play_disabled.png" type="Texture" id=3]
[ext_resource path="res://assets/btn_play_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/btn_tutorial.png" type="Texture" id=5]
[ext_resource path="res://assets/btn_tutorial_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/btn_tutorial_selected.png" type="Texture" id=7]
[ext_resource path="res://assets/btn_play_selected.png" type="Texture" id=8]
[ext_resource path="res://scripts/EndlessMode.gd" type="Script" id=9]
[ext_resource path="res://assets/back.png" type="Texture" id=10]
[ext_resource path="res://assets/back_hover.png" type="Texture" id=11]

[node name="EndlessModeMenu" instance=ExtResource( 1 )]
script = ExtResource( 9 )

[node name="TitleLabel" parent="Control" index="0"]
text = "Endless Mode"

[node name="PlayButton" type="TextureButton" parent="Control" index="1"]
margin_left = 480.414
margin_top = 642.049
margin_right = 1000.41
margin_bottom = 822.049
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="TextureButton" parent="Control" index="2"]
margin_left = 478.169
margin_top = 316.534
margin_right = 998.169
margin_bottom = 496.534
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Control" index="3"]
margin_left = 44.8985
margin_top = 817.152
margin_right = 158.898
margin_bottom = 957.152
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
